fix state management on dark mode

--- a/src/components/datatable/dataTable.scss
+++ b/src/components/datatable/dataTable.scss
@@ -22,6 +22,12 @@
     }
   }
 
+  .css-levciy-MuiTablePagination-displayedRows,
+  .css-zylse7-MuiButtonBase-root-MuiIconButton-root,
+  .css-i4bv87-MuiSvgIcon-root {
+    color: gray;
+  }
+
   .cellWithImg {
     display: flex;
     align-items: center;
